# bergman

./: .gitmodules  EnBergman_train.ipynb  EsperBergman_train.ipynb  README.md  bert_esperanto.ipynb.ipynb  pyproject.toml  pyrightconfig.json  text_classification.ipynb
src/bergman/: __init__.py  configuration_bergman.py  configuration_convnet.py  modeling_bergman.py  modeling_convnet.py
